New project packaging in a working progress