@@ -53,7 +53,6 @@
                     <version>3.11.0</version>
                     <configuration>
                         <release>21</release>
-                        <compilerArgs>--enable-preview</compilerArgs>
                     </configuration>
                 </plugin>
 
